--- a/mysite/account/templates/register.html
+++ b/mysite/account/templates/register.html
@@ -17,6 +17,7 @@
     <body>
         <h1>注册页面： </h1>
         <form method="post" enctype="multipart/from-data">
+            {% csrf_token %}
             {{uf.as_p}}
             <input type="submit" value="OK" />
         </form>
