finished Cookie-test

--- a/mysite/account/templates/login.html
+++ b/mysite/account/templates/login.html
@@ -21,6 +21,8 @@
             {{uf.as_p}}
             <input type="submit" value="ok" />
         </form>
+        <br/>
+        <a href="http://127.0.0.1:8000/account/register/">Regist</a>
     </body>
 
 </html>
