--- a/mysite/account/templates/register.html
+++ b/mysite/account/templates/register.html
@@ -21,6 +21,8 @@
             {{uf.as_p}}
             <input type="submit" value="OK" />
         </form>
+        <br/>
+        <a href="http://127.0.0.1:8000/account/login/">Login</a>
     </body>
 
 </html>
